--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "validate": "npm ls"
   },
   "dependencies": {
     "next": "12.0.8",
@@ -15,8 +16,17 @@
   "devDependencies": {
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
-    "eslint": "8.7.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "eslint": "7",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.0.8",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "typescript": "4.5.5"
-  }
+  },
+  "pre-commit": [
+    "lint",
+    "validate"
+  ]
 }
