--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,14 @@
 {
   "extends": [
+    "plugin:jest/recommended",
+    "plugin:jest/style",
+    "plugin:testing-library/react",
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended",
     "next",
     "next/core-web-vitals",
     "airbnb",
-    "airbnb/hooks",
-    "plugin:react/recommended",
-    "plugin:@typescript-eslint/recommended"
+    "airbnb/hooks"
   ],
   "plugins": ["@typescript-eslint"],
   "parser": "@typescript-eslint/parser",
@@ -25,6 +28,10 @@
     "import/extensions": "off",
     "import/no-unresolved": "off",
     "import/prefer-default-export": "off",
+    "import/no-extraneous-dependencies": [
+      "error", 
+      {"devDependencies": ["jest.setup.ts", "./src/**/*.?(spec|test).[jt]s?(x)"]}
+    ],
     "linebreak-style": 0,
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/no-explicit-any": "error",
