--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "validate": "npm ls"
+    "lint": "next lint --dir src",
+    "validate": "npm ls",
+    "test": "jest",
+    "test:ci": "jest --coverage --silent --ci"
   },
   "dependencies": {
     "next": "12.0.8",
@@ -14,16 +16,25 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.11.2",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.0",
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
-    "eslint": "7",
+    "@typescript-eslint/eslint-plugin": "5.10.0",
+    "@typescript-eslint/parser": "5.10.0",
+    "eslint": "7.31.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.0.8",
+    "eslint-plugin-jest": "^25.7.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "typescript": "4.5.5"
+    "eslint-plugin-testing-library": "^5.0.3",
+    "jest": "^27.4.7",
+    "ts-jest": "^27.1.3",
+    "typescript": "^4.5.5"
   },
   "pre-commit": [
     "lint",
