--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,7 @@
     "import/prefer-default-export": "off",
     "import/no-extraneous-dependencies": [
       "error", 
-      {"devDependencies": ["jest.setup.ts", "./src/**/*.?(spec|test).[jt]s?(x)"]}
+      {"devDependencies": ["jest.setup.ts", "src/stories/*", "./src/**/*.?(spec|test).[jt]s?(x)"]}
     ],
     "linebreak-style": 0,
     "@typescript-eslint/no-unused-vars": "error",
