--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "validate": "npm ls",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:ci": "jest --coverage --silent --ci"
+    "test:ci": "jest --coverage --silent --ci",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "next": "12.0.8",
@@ -17,6 +19,12 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@storybook/addon-actions": "^6.4.14",
+    "@storybook/addon-essentials": "^6.4.14",
+    "@storybook/addon-links": "^6.4.14",
+    "@storybook/cli": "^6.4.14",
+    "@storybook/react": "^6.4.14",
     "@testing-library/dom": "^8.11.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -26,14 +34,17 @@
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "5.10.0",
     "@typescript-eslint/parser": "5.10.0",
+    "babel-loader": "^8.2.3",
     "eslint": "7.31.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.0.8",
     "eslint-plugin-jest": "^25.7.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-storybook": "^0.5.6",
     "eslint-plugin-testing-library": "^5.0.3",
     "jest": "^27.4.7",
+    "storybook-css-modules-preset": "^1.1.1",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
   },
